<?xml version="1.0"?>
<package format="2">
  <name>lidar_lidar_cal</name>
  <version>0.1.0</version>
  <description>LiDAR-to-LiDAR calibration package using ICP</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- 依赖的 ROS 包 -->
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <!-- 系统依赖 -->
  <build_depend>libpcl-dev</build_depend>
  <exec_depend>libpcl-dev</exec_depend>

  <!-- 导出信息 -->
  <export>
    <build_type>catkin</build_type>
  </export>
</package>